<resources>
    <string name="app_name">المدارس الذكية</string>
    <string name="password">كلمة السر</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="login_as_teacher">تسجيل الدخول كمدرس</string>
    <string name="login_as_student">تسجيل الدخول كطالب</string>
    <string name="homework">الواجبات</string>
    <string name="the_answers">الاجوبة</string>
    <string name="section_icon_desc">ايقونة القسم</string>
    <string name="notifications">الاشعارات</string>
    <string name="exams">الامتحانات</string>
    <string name="lectures">المحاضرات</string>
    <string name="schedule">الجدول</string>
    <string name="library">المكتبة</string>
    <string name="rating">التقييم</string>
    <string name="absence">الغياب</string>
    <string name="logo_desc">ايقونة التطبيق</string>
    <string name="desc_ic_exam">ايقونة الامتحان</string>
    <string name="desc_ic_book">ايقونة كتاب</string>
    <string name="desc_ic_open_book">ايقونة كتاب مفتوع</string>
    <string name="student">الطالب</string>
    <string name="the_class">الصف</string>
    <string name="section">الشعبة</string>
    <string name="no_homework">لا توجد واجبات</string>
    <string name="connection_error">خطأ في الاتصال!</string>
    <string name="activation_failed">فشل التفعيل!</string>
    <string name="send_failed">فشل الارسال!</string>
    <string name="finish_failed">فشل الانهاء!</string>
    <string name="delete_failed">فشل الحذف!</string>
    <string name="add_failed">فشل الاضافة!</string>
    <string name="error">خطأ %1$s!</string>
    <string name="questions_of_subject">اسئلة %1$s</string>
    <string name="answers_of_subject">اجوبة %1$s</string>
    <string name="questions_number">%1$d سؤال</string>
    <string name="minutes_count">%1$d دقيقة</string>
    <string name="field_required">هذا الحقل مطلوب!</string>
    <string name="wrong_login_info">رقم الهاتف او كلمة السر غير صحيحة!</string>
    <string name="no_student_absence">لا توجد غيابات</string>
    <string name="no_exams">لا توجد امتحانات</string>
    <string name="no_lectures">لا توجد محاضرات</string>
    <string name="no_solutions">لا توجد اجوبة</string>
    <string name="no_notifications">لا توجد اشعارات</string>
    <string name="no_library">لا توجد كتب</string>
    <string name="exam_name">اسم الامتحان</string>
    <string name="notes_optional">الملاحظات (اختياري)</string>
    <string name="description_optional">الوصف (اختياري)</string>
    <string name="date">التاريخ</string>
    <string name="exam_date">تاريخ الامتحان</string>
    <string name="time">الوقت</string>
    <string name="classAndDivision">الصف والشعبة</string>
    <string name="add">اضافة</string>
    <string name="solution_added_successfully">تمت اضافة الجواب بنجاح</string>
    <string name="save">حفظ</string>
    <string name="subject_name">اسم المادة</string>
    <string name="exam_type">نوع الامتحان</string>
    <string name="homework_type">نوع الواجب</string>
    <string name="no_schedule">لا يوجد جدول</string>
    <string name="add_homework">اضافة واجب</string>
    <string name="add_exam">اضافة امتحان</string>
    <string name="add_mark">اضافة درجة</string>
    <string name="add_absence">اضافة غياب</string>
    <string name="username">اسم الطالب</string>
    <string name="profile">الحساب</string>
    <string name="email">الايميل</string>
    <string name="phone">الهاتف</string>
    <string name="age">العمر</string>
    <string name="name">الاسم</string>
    <string name="gender">الجنس</string>
    <string name="year">سنة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="account_expire">انتهت صلاحية الحساب، يرجى التسجيل من جديد</string>
    <string name="unauthorized">غير مصرح!</string>
    <string name="advertising">الاعلانات</string>
    <string name="no_advertisements">لا توجد اعلانات</string>
    <string name="no_rating">لا توجد تقييمات</string>
    <string name="role">الدور</string>
    <string name="subjects">المواد</string>
    <string name="notes">ملاحظات</string>
    <string name="homework_image_content_desc">صورة الواجب</string>
    <string name="add_image_con_desc">ايقونة صورة و زائد اضغط لاضافة صورة</string>
    <string name="rate_student">تقييم الطالب</string>
    <string name="rate">تقييم</string>
    <string name="subject">المادة</string>
    <string name="no_students">لا يوجد طلاب</string>
    <string name="no_questions">لا توجد اسئلة</string>
    <string name="select_section">اختر شعبة</string>
    <string name="no_student_selected">لم يتم اختيار طالب!</string>
    <string name="no_student_rated">لم يتم تقييم طالب!</string>
    <string name="done_successfully">تمت العملية بنجاح ✓</string>
    <string name="answers_sent_successfully">تم ارسال الاجوبة بنجاح ✓</string>
    <string name="must_enter_degree">يجب ادخال درجة الطالب</string>
    <string name="no_degree_added">لم يتم اضافة درجة</string>
    <string name="mark">الدرجة</string>
    <string name="add_rating">اضافة تقييم</string>
    <string name="title_activity_full_image">fullImageActivity</string>
    <string name="image_trans">imageTransition</string>
    <string name="add_account">اضافة حساب</string>
    <string name="choose_another_acc">اختر حساب اخر</string>
    <string name="max_accounts_error">الحد الاقصى هو 6 حسابات (لحذف حساب اسحبه للجانب)</string>
    <string name="invalid_pdf_url">الكتاب غير صالح!</string>
    <string name="no_schools">لا توجد مدارس</string>
    <string name="schoolName">ابحث عن المدرسة</string>
    <string name="logo_trans">logoTransition</string>
    <string name="the_certificate">الشهادة</string>
    <string name="unavailable">غير متوفرة</string>
    <string name="available">متوفرة</string>
    <string name="send_answer">ارسال الاجابة</string>
    <string name="answer_action">اجابة</string>
    <string name="the_answer">الجواب</string>
    <string name="show_answer">اظهار الاجابة</string>
    <string name="empty_answer_msg">يرجى اضافة وصف او صورة!</string>
    <string name="empty_question_msg">يرجى كتابة السؤال</string>
    <string name="no_question_type_selected_msg">يرجى اختيار نوع السؤال</string>
    <string name="unexpected_error">لقد حدث خطأ غير متوقع!</string>
    <string name="dash">-</string>
    <string name="online_exam">امتحان اونلاين</string>
    <string name="desc_ic_online_exam">ايقونة الامتحان الاونلاين</string>
    <string name="remainingTime">الوقت المتبقي</string>
    <string name="remainingQuestions">الاسئلة المتبقية</string>
    <string name="correct">صح</string>
    <string name="wrong">خطأ</string>
    <string name="correcting_answer">تصحيح الخطأ</string>
    <string name="options">اختيارات</string>
    <string name="define">عرف</string>
    <string name="why_question">علل</string>
    <string name="answer_the_following">اجب عن التالي</string>
    <string name="answer">اجب</string>
    <string name="true_and_false">صح وخطأ</string>
    <string name="the_question">السؤال</string>
    <string name="send_icon_description">ايقونة الارسال</string>
    <string name="duration_in_minutes">الفترة (بالدقائق)</string>
    <string name="required_questions">الاسئلة المطلوبة</string>
    <string name="key">الرمز</string>
    <string name="tag_add_question_fragment">addQuestionFragmentTag</string>
    <string name="empty_options_error_msg">يرجى اضافة اختيارين على الاقل عن طريق كتابة الاختيار على سطر جديد!</string>
    <string name="too_many_options_error_msg">يرجى اضافة ثلاث اختيارات كحد اقصى!</string>
    <string name="subject_not_selected_error">يرجى اختيار المادة!</string>
    <string name="class_not_selected_error">يرجى اختيار الصف!</string>
    <string name="empty_date_error">يرجى اختيار التاريخ!</string>
    <string name="empty_time_error">يرجى اختيار الوقت!</string>
    <string name="empty_key_error">يرجى ادخال الرمز!</string>
    <string name="invalid_key">الرمز غير صحيح!</string>
    <string name="empty_questions_error">يرجى اضافة سؤال!</string>
    <string name="no_answer">لا يوجد جواب</string>
    <string name="exam_key">رمز الامتحان</string>
    <string name="classes">الصفوف</string>
    <string name="the_questions">الاسئلة</string>
    <string name="activate">تفعيل</string>
    <string name="finish">انهاء</string>
    <string name="delete">حذف</string>
    <string name="answer_on">الاجابة على</string>
    <string name="send_answers">ارسال الاجوبة</string>
    <string name="confirmation">تأكيد</string>
    <string name="ok">اجل</string>
    <string name="cancel">الغاء</string>
    <string name="delete_confirmation">هل انت متأكد من الحذف؟</string>
    <string name="exam_finish_confirmation">هل انت متأكد من انهاء الامتحان؟</string>
    <string name="exam_activation_confirmation">هل انت متأكد من تفعيل الامتحان؟</string>
    <string name="invalid_url">الرابط غير صالح!</string>
    <string name="transition_profile_image">profileImageTransition</string>
    <string name="transition_school_name">schoolNameTransition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding_title_student_1">تابع دراستك</string>
    <string name="on_boarding_description_student_1">يمكنك معنا متابعة الواجبات، والامتحانات، والجدول، والتقييم، والغياب، واعلانات المدرسة</string>
    <string name="on_boarding_title_student_2">ما يفوتك شي ويانة</string>
    <string name="on_boarding_description_student_2">سوف تصلك اشعارات بكل ما هو جديد لكي تبقى على اطلاع</string>
    <string name="on_boarding_title_3">امتحن بالتطبيق</string>
    <string name="on_boarding_description_student_3">يمكنك الان الامتحان من خلال التطبيق ومشاهدة جميع اجاباتك السابقة معنا</string>
    <string name="skip">تخطي</string>
    <string name="start">ابدأ</string>
    <string name="on_boarding_title_teacher_1">درس طلابك</string>
    <string name="on_boarding_description_teacher_1">يمكنك معنا اضفة واجبات، امتحانات، تقييم، او غيابات للطلاب</string>
    <string name="on_boarding_title_teacher_2">ما يفوت طلابك شي</string>
    <string name="on_boarding_description_teacher_2">سوف تصل طلابك اشعارات بكل ما يتم اضافته من جديد</string>
    <string name="on_boarding_description_teacher_3">يمكنك الان اضافة امتحانات واسئلة لطلابك ومشاهدة اجوبتهم من خلال التطبيق</string>
    <string name="information">المعلومات</string>
    <string name="contact">التواصل</string>
    <string name="pdf">PDF</string>
    <string name="defaultFeesValue">0</string>
    <string name="paid_amount">المبلغ المدفوع</string>
    <string name="total_amount">المبلغ الكلي</string>
    <string name="remaining_amount">المبلغ المتبقي</string>
    <string name="amount">المبلغ</string>
    <string name="fees">الاقساط</string>
    <string name="no_fees">لا توجد اقساط</string>
    <string name="defaultDate">08/10/2020</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lecture_subject">موضوع المحاضرة</string>
    <string name="add_lecture">اضافة محاضرة</string>
    <string name="lecture_url">رابط المحاضرة</string>
    <string name="upload_lecture_pdf_optional">رفع ملف المحاضرة (اختياري)</string>
    <string name="upload_lecture">رفع المحاضرة</string>
    <string name="live_stream">البث المباشر</string>
    <string name="code">الكود</string>
</resources>
