<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mine= "http://schemas.android.com/apk/res/android">


    <data>
        <variable
            name="itemModel"
            type="com.smart.resources.schools_app.database.model.StudentInfoModel" />
    </data>



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layoutDirection="rtl"
        tools:context=".ui.activity.ProfileActivity">


        <include
            android:id="@+id/toolbarPlaceHolder"
            layout="@layout/view_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:pageTitle="@{@string/profile}" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:onClick="selectImage"
            android:src="@drawable/ic_businessman"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_overlay="false"
            app:civ_border_width="5dp"
            app:layout_constraintBottom_toTopOf="@+id/studentName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarPlaceHolder"
            app:layout_constraintVertical_chainStyle="spread" />

        <ImageView
            android:id="@+id/addImageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_desc"
            android:onClick="selectImage"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage" />


        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:fontFamily="@font/monadi"
            tools:text="@string/username"
            android:padding="@dimen/edit_text_padding"
            android:shadowDx="1"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:shadowColor="@color/shadowColor"
            android:text="@{itemModel.name}"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textFontWeight="900"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/studentAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/className"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_class_name"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/the_class"
            android:maxLength="30"
            android:padding="@dimen/edit_text_padding"
            android:text="@{itemModel.classInfoModel.getClassSection}"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/studentEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentAge" />

        <TextView
            android:id="@+id/studentEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/email"
            android:maxLength="30"
            android:padding="@dimen/edit_text_padding"
            android:text="@{itemModel.email}"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/studentPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/className" />


        <TextView
            android:id="@+id/studentAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/age"
            android:maxLength="30"
            android:padding="@dimen/edit_text_padding"
            android:shadowColor="@android:color/black"

            android:text="@{itemModel.age}"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/className"
            app:layout_constraintEnd_toStartOf="@+id/studentGender"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentName" />

        <TextView
            android:id="@+id/studentPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/phone"
            android:maxLength="30"
            android:padding="@dimen/edit_text_padding"
            android:text="@{itemModel.phone}"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentEmail" />


        <TextView
            android:id="@+id/studentGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/gender"
            android:maxLength="30"
            android:padding="@dimen/edit_text_padding"
            android:text="@{itemModel.gender}"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/studentAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/studentAge"
            app:layout_constraintTop_toTopOf="@+id/studentAge" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>